# capacium

./: CHANGELOG.md  README.md  agents.md  progress.txt  pyproject.toml
.github/workflows/: bump-tap.yml  ci.yml  codeql.yml  prerelease.yml  publish-pypi.yml
docs/: adapters.md  bridge-boundary.md  bundles.md  cli-reference.md  core-boundary.md  crawler-boundary.md  exchange-boundary.md  getting-started.md  index.md  lockfile.md  manifest.md  marketplace.md  publishing.md  registry.md  repo-boundary-audit.md  repo-topology.md  runtimes.md  signing.md  tap-boundary.md
src/capacium/: __init__.py  cli.py  manifest.py  models.py  registry.py  registry_client.py  registry_server.py  runtimes.py  signing.py  storage.py
src/capacium/adapters/: __init__.py  aider.py  antigravity.py  base.py  chainlit.py  cherry_studio.py  claude_code.py  claude_desktop.py  cline.py  codex.py  continue_dev.py  cursor.py  desktop_commander.py  gemini_cli.py  goose.py  langchain_bridge.py  librechat.py  mcp_config_patcher.py  nextchat.py  openclaw.py  opencode.py  roo_code.py  sourcegraph_cody.py  stub_adapters.py  windsurf.py  zed.py
src/capacium/commands/: doctor.py  install.py  key.py  remove.py  runtimes_cmd.py  sign.py  update.py  verify.py
src/capacium/marketplace/: app.js  index.html  style.css
tests/: test_adapters.py  test_install.py  test_marketplace.py  test_mcp_adapters.py  test_runtimes.py  test_signing.py  test_storage.py  test_update.py
