[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "capacium"
version = "0.7.2"
description = "Capability Packaging System — agent-agnostic packaging for AI agent capabilities"
readme = "README.md"
authors = [
    {name = "Capacium"},
]
license = {text = "Apache-2.0"}
keywords = [
    "ai",
    "agents",
    "skills",
    "capabilities",
    "packaging",
    "workflow",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
]
yaml = [
    "PyYAML>=6.0",
]
signing = [
    "cryptography>=42.0.0",
]

[project.urls]
Homepage = "https://github.com/Capacium/capacium"
Repository = "https://github.com/Capacium/capacium"
Issues = "https://github.com/Capacium/capacium/issues"

[project.scripts]
cap = "capacium.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["capacium*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
